testdata/baselines/reference/compiler/unknownUnionEmptyDebug.errors.txt
unknownUnionEmptyDebug.ts(6,17): error TS2345: Argument of type '{}' is not assignable to parameter of type 'Record<string, string>'.
  Index signature for type 'string' is missing in type '{}'.


==== unknownUnionEmptyDebug.ts (1 errors) ====
    function f() {
      const emptyObj = {};
      const acceptsRecord = (record: Record<string, string>) => {};
      
      // This should fail if {} is not assignable to Record<string, string>
      acceptsRecord(emptyObj);
                    ~~~~~~~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'Record<string, string>'.
!!! error TS2345:   Index signature for type 'string' is missing in type '{}'.
    }